--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Ryan COMSOC 21</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"/>
-     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" type="image/jpg" href="https://i.postimg.cc/QtbDb3fc/logo.png">
    </head>
 <body>
   <div class="container">
