--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
         <div class="address details">
           <i class="fas fa-map-marker-alt"></i>
           <div class="topic">Address</div>
-          <div class="text-one">Ryan International School, Sector 25, Rohini</div>
+          <div class="text-one">Ryan International School</div>
+          <div class="text-two">Sector 25, Rohini</div>
         </div>
         <div class="phone details">
           <i class="fas fa-phone-alt"></i>
