--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="topic-text">Contact Us</div>
         <form action="https://formsubmit.co/aryaduhan29@gmail.com" method="POST">
         <div class="input-box">
-          <input type="text" placeholder="Enter your name" required>
+          <input type="text" name="name" placeholder="Enter your name" required>
         </div>
         <div class="input-box">
-          <input type="text" placeholder="Enter your email" required>
+          <input type="text" name="email" placeholder="Enter your email" required>
         </div>
         <div class="input-box message-box">
-          <textarea placeholder="Enter your message" required></textarea>
+          <textarea name="message" placeholder="Enter your message" required></textarea>
         </div>
         <div class="button">
           <input type="submit" value="Send Now" >
