--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <form action="https://formsubmit.co/aryaduhan29@gmail.com" method="POST">
         <div class="input-box">
           <input type="text" name="name" placeholder="Enter your name" required>
+          <input type="hidden" name="_next" value="https://comsoc21.github.io/.thank/">
         </div>
         <div class="input-box">
           <input type="text" name="email" placeholder="Enter your email" required>
