--- a/index.html
+++ b/index.html
@@ -32,10 +32,11 @@
       </div>
       <div class="right-side">
         <div class="topic-text">Contact Us</div>
-        <form action="https://formsubmit.co/aryaduhan29@gmail.com" method="POST">
+        <form action="https://formsubmit.co/comsocryan21@gmail.com" method="POST">
         <div class="input-box">
           <input type="text" name="name" placeholder="Enter your name" required>
           <input type="hidden" name="_next" value="https://comsoc21.github.io/.thank/">
+          <input type="hidden" name="_cc" value="aryaduhan29@gmail.com">
         </div>
         <div class="input-box">
           <input type="text" name="email" placeholder="Enter your email" required>
