--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="input-box">
           <input type="text" name="email" placeholder="Enter your email" required>
-          <input type="hidden" name="_autoresponse" value="Thankyou for contacting us. This is a automated response. We will reply to your mail as soon as possible.
+          <input type="hidden" name="_autoresponse" value="Thankyou for contacting COMSOC. This is a automated response. We will reply to your mail as soon as possible.
           But here are some common doubts people have :-
 
           How to Register for Events?
