--- a/index.html
+++ b/index.html
@@ -40,14 +40,7 @@
         </div>
         <div class="input-box">
           <input type="text" name="email" placeholder="Enter your email" required>
-          <input type="hidden" name="_autoresponse" value="Thankyou for contacting COMSOC. This is a automated response. We will reply to your mail as soon as possible.
-          But here are some common doubts people have :-"
-
-          value="How to Register for Events?
-          Ans.- Go to our website, on home page. There is a Register button which will redirect you to a form. Fill that form."
-          
-          value="When and how will the events be conducted?
-          Ans.- Everyting is available on our Brochure which is available on the home page of our website below Register button.">
+          <input type="hidden" name="_autoresponse" value="Thankyou for contacting COMSOC. This is a automated response. We will reply to your mail as soon as possible.ㅤㅤ But here are some common doubts people have :- ㅤㅤㅤㅤHow to Register for Events? Ans.- Go to our website, on home page. There is a Register button which will redirect you to a form. Fill that form.ㅤㅤㅤ When and how will the events be conducted? Ans.- Everyting is available on our Brochure which is available on the home page of our website below Register button.">
         </div>
         <div class="input-box message-box">
           <textarea name="message" placeholder="Enter your message" required></textarea>
